# dark-web-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
chapter-1/: README.md  chapter-1.ipynb
chapter-1/decoding-icmp-packets/: Cargo.toml
chapter-1/decoding-icmp-packets/src/: main.rs
chapter-1/decoding-tcp-packets/: Cargo.toml
chapter-1/decoding-tcp-packets/src/: main.rs
chapter-1/decoding-the-essence-of-udp/: Cargo.toml
chapter-1/decoding-the-essence-of-udp/src/: main.rs
chapter-1/decoding-the-ip-header/: Cargo.toml
chapter-1/decoding-the-ip-header/src/: main.rs
chapter-1/decoding-udp-packets/: Cargo.toml
chapter-1/decoding-udp-packets/src/: main.rs
chapter-1/syn-flood-port-scanning/: Cargo.toml
chapter-1/syn-flood-port-scanning/src/: main.rs
chapter-2/: README.md  chapter-2.ipynb
chapter-2/parse-png/src/: main.rs
chapter-2/stegano/: Cargo.toml
chapter-2/stegano/src/: main.rs
chapter-3/: README.md  chapter-3.ipynb
chapter-4/: README.md  chapter-4.ipynb
chapter-5/: README.md  chapter-5.ipynb  etc.txt  example.txt  file.txt  mapping.txt
chapter-6/: README.md  chapter-6.ipynb
chapter-6/sql-injection/: Cargo.toml  Rocket.toml  db.sqlite
chapter-6/sql-injection/src/: main.rs
